entity_macros/tests/ui/derive/ent/unexpected-inner-attr-for-ent-edge.stderr
error: Unknown field: `something` at my_edge/edge
 --> $DIR/unexpected-inner-attr-for-ent-edge.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
