entity_macros/tests/ui/derive/ent/unexpected-inner-attr-for-ent-edge.rs
use entity::{Database, Ent, Id};

#[derive(Clone, Ent)]
struct TestEnt {
    #[ent(id)]
    id: Id,

    #[ent(database)]
    database: Option<Box<dyn Database>>,

    #[ent(created)]
    created: u64,

    #[ent(last_updated)]
    last_updated: u64,

    #[ent(edge(type = "TestEnt", something))]
    my_edge: Id,
}

fn main() {}
